[package]
name = "my-bus-tracker"
version = "0.1.0"
authors = ["Angus Ireland <bustracker@angusi.net>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
futures = "0.1"
hyper = "0.11"
#hyper-rustls = { version = "0.12", optional = true }
#hyper-tls = { version = "0.1", optional = true }
#native-tls = { version = "0.1", optional = true }
md5 = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.2"
slog-term = "2.4"
tokio-core = "0.1"
url = "1.5.1"
